perf(menu): 优化菜单接口 - 消除N+1/Map建树/COUNT查询/缓存/懒加载